# Dialog-Systems-FHPGS

./: README.md  setup.cfg
src/satnews/: analyze_image_audio.py  load_data.py  main.py  matcher.py  model.py  real_synthesizer.py  satire_retriever.py  satire_synthesizer.py  scraper.py  space.txt  summarizer.py  test.py  utils.py
src/satnews/analyze_image_audio/: analyze_image_audio.py  test.py
