##########################
# Setup.py Configuration #
##########################
[metadata]
name = satnews
version = 0.0.1-dev
description = satirical newsagent
long_description = file: README.md
long_description_content_type = text/markdown


# Author information
author = Saransh Jain, Pranav Yadav, Hitik Panchal, Christian Schultze

[options]
install_requires =
    smolagents
    tqdm
    torch
    torchvision
    torchaudio
    transformers
    accelerate
    bitsandbytes
    pillow
    pydub
    ollama
    bs4
    feedparser
    requests
    tiktoken
    sentencepiece

python_requires = >=3.10

packages = find:
package_dir =
    = src

[options.packages.find]
where = src
