##########################
# Setup.py Configuration #
##########################
[metadata]
name = satnews
version = 0.0.1-dev
description = satirical newsagent
long_description = file: README.md
long_description_content_type = text/markdown


# Author information
author = Saransh Jain, Pranav Yadav, Christian Schultze

[options]
install_requires =
    tqdm
    torch
    torchvision
    torchaudio
    pillow
    ollama
    bs4
    feedparser
    requests
    yt-dlp
    pydub
    transformers
    duckduckgo_search
    smolagents

python_requires = >=3.10

packages = find:
package_dir =
    = src

[options.packages.find]
where = src
